# Thaumium

./: .cmake-format.json  .gitignore  .gitmodules  CMakeLIsts.txt  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  Thaumium.sln  dllmain.cpp  dllmain.h  pch.h  signatures.h
Launcher/: Launcher.cpp  Launcher.vcxproj
Thaumium/: ChatCommand.h  Core.cpp  Core.h  FrontendOptions.cpp  FrontendOptions.h  TextChatHandler.cpp  TextChatHandler.h  Thaumium.vcxproj  Thaumium.vcxproj.filters  dllmain.cpp  hooks.cpp  hooks.h  memory.cpp  memory.h  optionsheaderhook.asm  pch.h  plugin.h  shadowtable.h  switchtable.h  util.h
Thaumium/NMS/: GcApplication.h  GcBooleanOption.cpp  GcBooleanOption.h  GcButtonOption.h  GcFrontendPageOptions.h  GcNGuiElement.h  GcNGuiElementData.h  GcNGuiLayer.cpp  GcNGuiLayer.h  GcNGuiLayerData.h  GcNGuiLayoutData.h  GcNGuiText.h  GcNGuiTextData.h  GcNetworkManager.h  GcNetworkMessageManager.h  GcOption.h  GcOptionsInteractionContext.h  GcOptionsMenuState.h  GcTextChatInput.h  GcTextChatManager.h  GcUIOptionListElement.cpp  GcUIOptionListElement.h  ITkNGuiDraggable.h  NGuiAnimationEvent.h  NGuiInputType.h  TkBBox2d.h  TkCurveType.h  TkDynamicArray.h  TkFixedString.h  TkID.h  TkMemoryManager.h  TkNGuiAlignment.h  TkNGuiForcedStyle.h  TkNGuiGraphicStyle.h  TkNGuiGraphicStyleData.h  TkNGuiTextStyle.h  TkNGuiTextStyleData.h  TkSTLAllocatorShim.h  TkVector2.h  eCurve.h  (+3 more)
application/: GcApplication.h
atlas/: GcAtlasDownloadType.h  GcAtlasTransportWinHttp.h  Http.h  WinHttpTask.h
common/attachments/: TkHandle.h
common/graphics/: TkColour.h
common/maths/: TkAABB.h  TkBBox2d.h  TkMatrix.h  TkMatrix34.h  TkPhysRelVec3.h  TkVector2.h  TkVector3.h  TkVector4.h
common/metadata/: TkClassPointer.h  TkID.h  TkMetaData.h  TkMetaDataClass.h  TkMetaDataXML.h
common/resources/: TkResource.h  TkResourceDescriptor.h  TkResourceManager.cpp  TkResourceManager.h  TkResourceRegistryEntry.h  TkSmartResHandle.h
common/simulation/: TkRigidBodyPtr.h  TkSeed.h
common/system/: AutoPooled.h  TkIterationState.h
common/system/thread/: TkLockFreeQueue.h
common/system/timer/: TkClock.h
common/utilities/: Hooks.h  Memory.cpp  Memory.h  TkAlignedBlock.h  TkArray.h  TkLinearHashTable.h  TkMemoryManager.h  TkMemoryPool.h  TkString.h  TkStrongType.h
common/utilities/containers/: TkVector.h  (+4 more)
common/xml/: XMLAttribute.h  XMLClear.h  XMLNode.h
core/: Core.cpp  Core.h  Hooks.cpp  Hooks.h  MBINExport.cpp  MBINExport.h  Memory.cpp  TextChatHandler.h  core.cpp  core.h  memory.cpp
core/globals/: application.cpp  engine.cpp  globals.h  hash.h  lookup.cpp
engine/: EgMain.h  EgModules.h  TkEngineUtils.h
graphics/: Gradient.h  Vertical.h
lib/: libMinHook.x64.lib  spookyhash.lib
metadata/: CMakeLists.txt  README.md  dllmain.cpp  dump.cpp  dump.h  hooks.cpp  hooks.h  memory.h  paths.h  pch.h
metadata/simulation/: GcAstroidGeneratorAssignment.meta.h  GcFrigateFlybyType.meta.h  GcSceneSettings.meta.h  GcSolarSystemLocatorChoice.h  GcSolarSystemLocatorTypes.h
modules/: core.cpp  core.h  curlhook.cpp  curlhook.h  frontendoptions.cpp  frontendoptions.h  nguimbinexport.cpp  nguimbinexport.h  textchathandler.cpp  textchathandler.h
modules/commands/: debugwalkertitanfall.cpp  debugwalkertitanfall.h  textcommand.h
network/: GcNetworkManager.h  GcNetworkMessageManager.h  GcTextChatInput.h  GcTextChatManager.h  GcURL.h
nms/: README.md  version.h
nms/Application/: GcApplication.h
nms/Engine/: EgMain.cpp  EgMain.h  EgModules.cpp  EgModules.h  Engine.cpp  FIOS2HANDLE.h
nms/GameComponents/: GcApplication.h  GcAtlasDownloadType.h  GcBooleanOption.cpp  GcBooleanOption.h  GcFreighterFlybyType.h  GcFrigateFlybyType.cpp  GcFrigateFlybyType.h  GcNGuiElement.cpp  GcNGuiElement.h  GcNGuiElementData.h  GcNGuiLayer.cpp  GcNGuiLayer.h  GcNGuiLayerData.cpp  GcNGuiLayerData.h  GcNGuiLayoutData.h  GcNGuiPresetGraphic.h  GcNGuiPresetText.h  GcNGuiSpacingData.cpp  GcNGuiSpacingData.h  GcNGuiText.cpp  GcNGuiText.h  GcNGuiTextData.cpp  GcNGuiTextData.h  GcNetworkManager.h  GcNetworkMessageManager.h  GcOption.h  GcOptionsInteractionContext.cpp  GcOptionsInteractionContext.h  GcOptionsMenuState.h  GcPlayer.h  GcPlayerControlInput.h  GcTextChatManager.h  GcUIOptionListElement.cpp  GcUIOptionListElement.h  GcURL.h
nms/NGui/: AltMode.h  eAnimate.h
nms/Network/: GcNetworkManager.h  GcTextChatInput.h  GcTextChatManager.h  GcURL.h
nms/Reality/: FrigateFlybyType.h
nms/Simulation/: GcPlayerControlInput.h
nms/ToolKit/: TkAlignedBlock.h  TkBitArray.h  TkBitArrayStorage.h  TkClassPointer.h  TkColour.h  TkCurveType.h  TkDynamicArray.h  TkFileSystem.h  TkFixedArray.h  TkFixedString.h  TkHashedNGuiElement.h  TkID.h  TkLinearHashTable.h  TkLinearMemoryPool.h  TkMemoryPool.h  TkMetaDataXML.h  TkNGuiAlignment.h  TkNGuiDraggable.h  TkNGuiForcedStyle.h  TkNGuiGraphicStyle.h  TkNGuiGraphicStyleData.h  TkNGuiTextStyleData.h  TkNGuiUndoable.h  TkStackVector.h  TkVector3.h  TkVector4.h
proxy/: CMakeLists.txt  dllmain.cpp  exports.h  framework.h  pch.h
simulation/: CentreJourneyDestination.h  DiscoveryAutoSync.h  GcAstroidGeneratorRing.h  GcPlayerControlInput.cpp  GcPlayerRespawn.h  GcSceneManager.h  GcSimulation.h  GcSolarSystem.h  GcSolarSystemAstroidFields.h
simulation/particles/: HeavyAirType.h
simulation/player/: GcAvailableWeapons.h  GcPlayerControlInput.h  GcPlayerSpawnState.h
simulation/solarsystem/: GalaxyStarAnomaly.h  GcGalacticSolarSystemAddress.h  GcGalaticVoxelCoordinate.h  GcSolarSystem.h  GcSolarSystemAstroidFields.h  GcSolarSystemDirector.h
source/application/: GcApplication.cpp  GcApplication.h
source/atlas/: DownloadType.h  GcAtlasDownloadType.h  GcAtlasTransportWinHttp.h  Http.h
source/core/: core.cpp  core.h  hooks.h  memory.h
source/engine/: EgMain.cpp  EgMain.h  EgModules.h  TkEngineUtils.h
source/graphics/: TkCurveType.h
source/network/: GcNetworkManager.h  GcTextChatInput.h  GcTextChatManager.h
thaumium/: Core.cpp  Core.h  GcURLHook.cpp  GcURLHook.h  Hooks.cpp  TextChatHandler.cpp
util/: hooks.cpp  hooks.h  memory.cpp  memory.h
util/spookyhash/: SpookyV2.h
(+81 files in other folders)
